feat: implement Parts 5-7 with complete functionality